# RustyEdit

./: .gitignore  Cargo.toml  README.md
src/: app.rs  app_state.rs  asset_manager.rs  color.rs  image_utils.rs  imgui_impl_glfw.rs  imgui_instance.rs  logging.rs  main.rs  texture.rs  viewport.rs  widget_manager.rs  widget_state.rs  window.rs
