[package]
name = "rusty-edit"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.44.0"
imgui = "0.8.2"
imgui-opengl-renderer = "0.11.1"
gl = "0.14.0"
image = "0.24.1"
log = "0.4.16"
termcolor = "1.1.3"
chrono = "0.4.19"